2002-12-17  Mo DeJong  <mdejong@users.sourceforge.net>

	* src/native/javaInterp.c (BTestCmd,
	Java_tcl_lang_Interp_createBTestCommand):  Add
	new btest command via createBTestCommand().
	* src/native/javaList.c (Java_tcl_lang_TclList_index):
	Check for previously disposed Tcl_Obj.
	* src/tclblend/tcl/lang/Interp.java (createBTestCommand):
	Add native method decl.
	* src/tclblend/tcl/lang/TclList.java: Fixup comments.
	* src/tcljava/tcl/lang/TclString.java: Fixup comments.
	* src/tests/tclblend/tcl/lang/NativeTestExtension.java:
	Invoke Interp.createBTestCommand().
	* src/tests/tcljava/tcl/lang/JtestCmd.java (cmdProc):
	Modify the refcount subcommand so that it returns
	refCount-1 to account for the ref added for the
	method invocation.
	* tests/inprogress/AfterCmd.test:
	* tests/inprogress/BgErrorMgr.test:
	* tests/inprogress/UplevelCmd.test :
	Update tests that use jtest refcount to account
	for change made to JtestCmd.java.
	* tests/jacl/refCount.test: Check jtest command.
	* tests/tclblend/javaTimer.test: Add comment.
	* tests/tclblend/refCount.test: Add tests
	for new btest command.

2002-12-17  Mo DeJong  <mdejong@users.sourceforge.net>

	* src/native/java.h:
	* src/native/javaInterp.c (JavaCmdProc):
	* src/native/javaObj.c (JavaBreakRef, JavaGetTclObject):
	* src/tests/tcljava/tests/ListLengthCmd.java:
	* tests/tclblend/javaObj.test:
	Add new JavaBreakRef and invoke it from JavaCmdProc
	and JavaGetTclObject. This fixes a problem where
	a TclObject with a CObject or a TclList internal
	rep is stored as a Java ref inside a Tcl_Obj on
	the C side. Only non-CObject or TclList types
	should have a reference from C pointing to the
	container TclObject.

2002-12-17  Mo DeJong  <mdejong@users.sourceforge.net>

	* src/native/javaObj.c (Java_tcl_lang_CObject_makeRef,
	Java_tcl_lang_CObject_newCObject): Return after
	raising exception to avoid crash in some strange
	situations. Zero out 64 bit structure before
	assigning 32 bit value to make debugging of